# python-smart-budget

./: .gitignore  pyproject.toml
app/: config.py  database.py  main.py  models.py
app/controllers/: auth.py  users.py
app/dependencies/: entity_exist.py  owner.py
app/repository/: base.py  income.py  income_categories.py  user.py
app/routes/: users.py
app/schemes/: auth.py  base.py  income.py  income_category.py  user.py
app/services/: auth.py
migrations/: env.py
migrations/versions/: 2025_04_08_0844-82762a10d389_create_income.py  2025_04_08_0844-aa3b012601ba_create_user.py  2025_04_08_0853-a125f8916d2a_create_outlay.py
